fixed small buttons on mobile, added git to skills boxes

--- a/new_site/src/colors.scss
+++ b/new_site/src/colors.scss
@@ -9,6 +9,7 @@ $theme:#1F6356;
 $light-theme: #49857a;
 $dark-theme: #15423a;
 $accent: #67c781;
+$dark-accent: #488a5a;
 $neutral: #999;
 $light-neutral: #ddd;
 $dark-neutral: #444;
